@@ -1,3 +1,13 @@
+2004-06-02  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-cvs-b168
+
+	* Change:  Add user security to config wizard (!!)
+	  If a Gallery has been configured, require the user to login as
+	  an admin before allowing them to reconfigure using the config wizard.
+	  Users configuring for the first time are allowed to bypass the login
+	  requirement.
+
+	  Still needed:  A method to reset the administrator password if it's lost.
+
 2004-06-02 Jens Tkotz <jens@peino.de>  1.4.4-cvs-b167
 
 	* New: Enable mod_rewrite for GeekLog
